--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ sudo: required
 
 language: c
 
+arch:
+  - AMD64
+  - ppc64le
+
 env:
   - BUILD_OPTS="--prefix=/usr --libdir=/usr/lib64"
   - BUILD_OPTS="--prefix=/usr --libdir=/usr/lib64 --enable-docs" DOCS=yes EXTRA_PKGS="gtk-doc valadoc valadoc-devel"
